--- a/src/App.scss
+++ b/src/App.scss
@@ -44,6 +44,7 @@
       position: fixed;
       right: 4.4%;
       bottom: 4.4%;
+      z-index: 1000;
     }
   }
   .subbar-wrapper {
@@ -139,8 +140,43 @@
       width: 250px;
       margin-top: 50px;
       margin-left: 10px;
-      @media screen and(max-width:800px) {
+      @media screen and(max-width:850px) {
         display: none;
+      }
+      .recommendation {
+        a {
+          font-family: IBM Plex Sans;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 12px;
+          line-height: 16px;
+          /* identical to box height */
+
+          text-align: right;
+          text-align: end;
+          text-decoration: none;
+          color: #2f6ce5;
+          margin-top: 60px;
+          display: block;
+        }
+        h2 {
+          margin-top: 54px;
+          margin-bottom: 24px;
+          display: flex;
+          align-items: center;
+          font-family: IBM Plex Sans;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 14px;
+          line-height: 18px;
+          letter-spacing: 0.1em;
+          text-transform: uppercase;
+
+          color: #000000;
+          svg {
+            margin-right: 8px;
+          }
+        }
       }
       input {
         border: 0;
