--- a/src/components/Banner/style.scss
+++ b/src/components/Banner/style.scss
@@ -7,6 +7,7 @@
   background-size: cover;
   @media screen and(max-width:850px) {
     height: 236px;
+    background-image: url('https://i.ibb.co/L9JRv9w/Group-1720.png');
   }
   .mobile-options {
     display: none;
