--- a/src/components/Cards/style.scss
+++ b/src/components/Cards/style.scss
@@ -195,7 +195,9 @@
           }
         }
       }
-      span {
+      .views {
+        display: flex;
+        align-items: center;
         svg {
           margin-right: 8px;
         }
